--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}About Us| {% endblock title %}
+{% block title %}About Us{% endblock title %}
 
 {% block content %}
     <h1>About us page</h1>
