--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Contacts| {% endblock title %}
+{% block title %}Contacts{% endblock title %}
 
 {% block content %}
     <h1>Contacts Page</h1>
