--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Home{% endblock title %}
 
 {% block content %}
     <h1>Home Page</h1>
-    <a href="{{url_for('pages.about_us')}}">About</a>
-    <a href="{{url_for('pages.contacts')}}">Contact</a>
-    <a href="{{url_for('pages.services')}}">Services</a>    
 {% endblock %}
