--- a/app/templates/services.html
+++ b/app/templates/services.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Services| {% endblock title %}
+{% block title %}Services{% endblock title %}
 
 {% block content %}
     <h1>Services Page</h1>
