--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,9 +1,83 @@
+/*NAV BAR STYLE*/
 .add-marg{
     margin-left: 7%;
-    margin-right: 280px;
+    margin-right: 230px 
 }
-
 
 .nav-item{
     margin-right: 20px;
+}
+
+.nav-link:hover {
+    background-color: #f8f9fa; 
+    transition: background-color 0.3s ease; 
+}
+
+
+body {
+    min-width: 700px; 
+    min-height: 600px; 
+}
+
+/*HOME PAGE STYLE*/
+.intro {
+    position: relative;
+    margin:0;
+}
+
+.intro h1 {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(243, 243, 243); 
+    font-size: 5.5em;
+    font-weight: 700;
+    text-align: center;
+
+}
+
+.intro img {
+    margin: 0;
+    max-width: 100%; 
+    max-height: 900px;
+    filter: brightness(50%); 
+}
+
+
+.first-section {
+    padding: 50px; 
+    margin: 10px;  
+    margin: 0 12% 0 12%;
+    display: flex;
+    flex-direction: row;
+}
+
+.first-section h2{
+    margin: 0 0 0 10px;
+    font-size: 2.5em;
+    font-weight: 700;
+    color: #2b054a;
+    text-align: center;
+}
+
+.title{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.def{
+    margin: 20px 0 0 10px;
+    font-size: 1.1em;
+    font-weight: 400;
+    color: #2b054a;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.def p{
+    margin-bottom: 30px;
 }
