--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Meta Tags  -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %} | OneQuantum PH</title>
     <meta name="description" content="OneQuantum Philippines is a community-driven organization dedicated to promoting awareness.">
+    <meta name="keywords" content="OneQuantum, Quantum Computing, Quantum Technology, Quantum Philippines">
+    <meta name="author" content="OneQuantum Philippines">
+
+    <!-- Title  -->
+    <title>{% block title %}{% endblock title %} | OneQuantum PH</title>
+
+    <!-- Bootstrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- Custom CSS  -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
 </head>
@@ -13,7 +23,7 @@
 <body>
 
     <!-- Navigation Bar  -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid px-5">
           <a class="navbar-brand add-marg" href="{{url_for('index')}}">OneQuantum Philippines</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
