--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -81,3 +81,37 @@ body {
 .def p{
     margin-bottom: 30px;
 }
+
+.second-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0 12% 0 12%;
+    padding: 50px;
+    
+}
+
+.card1 {
+    margin: 0 10px 0 10px;
+    padding: 3%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 350px;
+    height: 200px;
+    background-color: #ffffff;
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.card1:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
+}
+
+
+section:not(:last-child) {
+    border-bottom: 1px solid #000; 
+}
