--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,12 +24,12 @@
     </section>
 
     <section class="second-section">
-        <div>
+        <div class="card1">
             <h2>Our Mission</h2>
             <p>to foster a vibrant quantum ecosystem in the country</p>
         </div>
 
-        <div>
+        <div class="card1">
             <h2>Our Vission</h2>
             <p>to position the Philippines as a leading hub for quantum research, innovation, and application.</p>
         </div>
@@ -37,7 +37,7 @@
 
     <footer> 
         <div class="logo">
-            <img src="{{ url_for('static', filename='img/Logo 1.jpg') }}" alt="quantum computer"></div>
+            <img src="{{ url_for('static', filename='img/Logo 1.png') }}" alt="quantum computer"></div>
         <div>
             <h2>Connect with us</h2>
             <p>Facebook</p>
