modify the footer section elements and class

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,15 +36,17 @@
     </section>
 
     <footer> 
-        <div class="logo">
-            <img src="{{ url_for('static', filename='img/Logo 1.png') }}" alt="quantum computer"></div>
-        <div>
-            <h2>Connect with us</h2>
-            <p>Facebook</p>
-            <p>Twitter</p>
-            <p>Instagram</p>
+        <div class="first-sec-footer">
+            <img src="{{ url_for('static', filename='img/Logo 1.png') }}" alt="quantum computer">
+            <p>© 2024 OneQuantum Philippines.</p>
         </div>
-       
-        <p>© 2021 OneQuantum Philippines</p>
+
+        <div>
+            <h2>OneQuantum Philippines</h2>
+            <p>Connect with us through:</p>
+            <a href="https://www.facebook.com/onequantum.ph" target="_blank" rel="noopener">Facebook</a>
+            <a href="https://www.facebook.com/onequantum.ph" target="_blank" rel="noopener">Twitter</a>
+            <a href="https://www.linkedin.com/company/onequantum-ph/" target="_blank" rel="noopener">Linkedin</a>
+        </div>
     </footer>
 {% endblock %}
