--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
     <!-- Navigation Bar  -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid px-5">
-          <a class="navbar-brand add-marg" href="{{url_for('index')}}">OneQuantum Philippines</a>
+          <a class="navbar-brand add-marg" href="{{url_for('index')}}"><h1 class="main-logo">OneQuantum Philippines</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
