add content for services page

--- a/app/templates/services.html
+++ b/app/templates/services.html
@@ -3,5 +3,29 @@
 {% block title %}Services{% endblock title %}
 
 {% block content %}
-    <h1>Services Page</h1>
+    <h2>Our Services</h2>
+
+    <section>
+        <h3>Quantum Computing Consultation</h3>
+        <div>
+            <img src="" alt="consultation">
+        </div>
+        <p>We provide expert consultation on quantum computing, helping businesses understand and leverage the power of quantum technologies.</p>
+    </section>
+
+    <section>
+        <h3>Quantum Software Development</h3>
+        <div>
+            <img src="" alt="development">
+        </div>
+        <p>Our team of experienced developers can help design and implement software for quantum computers, tailored to your specific needs.</p>
+    </section>
+
+    <section>
+        <h3>Quantum Education and Training</h3>
+        <div>
+            <img src="" alt="Education and training">
+        </div>
+        <p>We offer educational programs and training workshops on quantum computing, aimed at both individuals and organizations.</p>
+    </section>
 {% endblock %}
