refactor code for styling

--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -4,11 +4,25 @@
 
 {% block content %}
     <header>
-        <h1>About Us</h1>
+        <div class="container">
+            <h1>About Us</h1>
+        </div>
     </header>
 
     <section class="first-section-au">
-        <p>It is a community-driven organization dedicated to promoting awareness, education, and collaboration in the field of quantum computing within the Philippines.</p>
+        <div class="container">
+            <p>
+                The Quantum Computing Society of the Philippines is committed to nurturing a thriving quantum computing community, fostering innovation and excellence in research, education, and entrepreneurship, and positioning the Philippines as a leading hub for quantum computing expertise and innovation in the region.
+            </p>
+
+            <p>
+                To achieve these goals, the Quantum Computing Society of the Philippines (QCSP) organizes regular events such as workshops, seminars, and conferences to facilitate knowledge exchange and collaboration among quantum computing enthusiasts, researchers, educators, and industry professionals. These events serve as platforms for sharing the latest developments in quantum computing research, exploring potential applications across various fields, and networking with like-minded individuals and organizations both locally and internationally. 
+            </p>
+
+            <p>
+                Additionally, the QCSP works closely with academic institutions, government agencies, and industry partners to develop educational programs, promote quantum computing literacy, and support initiatives aimed at building a skilled workforce capable of driving innovation in this emerging field. By fostering a vibrant ecosystem of collaboration and learning, the QCSP is paving the way for the Philippines to become a key player in the global quantum computing landscape.
+            </p>
+        </div>
     </section>
 
     <section class="second-section-au">
