--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -14,6 +14,27 @@
     </header>
 
     <section class="first-section-con">
+        <h3>Our Social Media Accounts</h3>
+
+    </section>
+
+    <section class="second-section-con">
+        <h3>Our Locations</h3>
+        <div>
+            <h4>Manila</h4>
+            <p>123 Example St, Example City, EX 12345</p>
+            <img alt="img of place">
+        </div>
+
+        <div>
+            <h4>Cebu</h4>
+            <p>123 Example St, Example City, EX 12345</p>
+            <img alt="img of place">
+        </div>
+
+    </section>
+
+    <section class="third-section-con">
         <h3>Send us a message</h3>
         <form action="/submit_contact_form" method="post">
             <label for="name">Name:</label><br>
@@ -24,15 +45,6 @@
             <textarea id="message" name="message"></textarea><br>
             <input type="submit" value="Submit">
         </form>
-    </section>
-
-    <section class="second-section-con">
-        <h3>Our Location</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.073394394073!2d121.0190003148235!3d14.651394989768768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c8e3f3f3f3f3%3A0x3e3e3e3e3e3e3e3e!2sOneQuantum%20Philippines!5e0!3m2!1sen!2sph!4v1633663940733!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-
-    <section class="third-section-con">
-        
     </section>
 
 
