modify and add some classes for styling

--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -26,32 +26,36 @@
     </section>
 
     <section class="second-section-au">
-        <div class="card1">
-            <h2>Our Mission</h2>
-            <p>to foster a vibrant quantum ecosystem in the country</p>
-        </div>
+        <div class="container-2">
+            <div class="card1">
+                <h2>Our Mission</h2>
+                <p>to foster a vibrant quantum ecosystem in the country</p>
+            </div>
 
-        <div class="card1">
-            <h2>Our Vission</h2>
-            <p>to position the Philippines as a leading hub for quantum research, innovation, and application.</p>
+            <div class="card1">
+                <h2>Our Vission</h2>
+                <p>to position the Philippines as a leading hub for quantum research, innovation, and application.</p>
+            </div>
         </div>
     </section>
     
     <section class="third-section-au">
-        <div>
-            <h2>President of OneQuantum Philippines</h2>
-            <img src="{{ url_for('static', filename='img/President.png') }}" alt="President">
-            <p>Bobby Corpus Jr.</p>
-        </div>
+        <div class="container-2">
+            <div class="title-and-pic">
+                <h2>President of OneQuantum Philippines</h2>
+                <img src="{{ url_for('static', filename='img/President.png') }}" alt="President">
+                <p>Bobby Corpus Jr.</p>
+            </div>
 
-        <div>
-            <p>
-                Sir Bobby Corpus is a highly experienced solution architect across Telecoms, Finance, and mission-cirtical enterprise systems
-            </p>
+            <div>
+                <p>
+                    Sir Bobby Corpus is a highly experienced solution architect across Telecoms, Finance, and mission-cirtical enterprise systems
+                </p>
 
-            <p>
-                He is a community leader in open source software and developed a passion for quantum computing through interests in both Physics and Computer Sciecnce.
-            </p>
+                <p>
+                    He is a community leader in open source software and developed a passion for quantum computing through interests in both Physics and Computer Sciecnce.
+                </p>
+            </div>
         </div>
     </section>
 
