--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,9 +44,15 @@
         <div>
             <h2>OneQuantum Philippines</h2>
             <p>Connect with us through:</p>
-            <a href="https://www.facebook.com/onequantum.ph" target="_blank" rel="noopener">Facebook</a>
-            <a href="https://www.facebook.com/onequantum.ph" target="_blank" rel="noopener">Twitter</a>
-            <a href="https://www.linkedin.com/company/onequantum-ph/" target="_blank" rel="noopener">Linkedin</a>
+            <a href="https://www.facebook.com/onequantum.ph" target="_blank" rel="noopener">
+                Facebook
+            </a>
+            <a href="https://www.facebook.com/onequantum.ph" target="_blank" rel="noopener">
+                Twitter
+            </a>
+            <a href="https://www.linkedin.com/company/onequantum-ph/" target="_blank" rel="noopener">
+                Linkedin
+            </a>
         </div>
     </footer>
 {% endblock %}
